Fix admin menu dropdown. Make dark mode background color have better contrast.

--- a/src/client/index.css
+++ b/src/client/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 body.dark-mode {
-  background-color: #000;
+  background-color: #121212;
   color: #fff;
 }
 
